--- a/myCSS.css
+++ b/myCSS.css
@@ -4,7 +4,7 @@ body {
 	margin: 0 auto;
 }
 .homePage {
-	background: #222222;
+	background: #A38C56;
 }
 .container {
 	width: 960px;
@@ -30,11 +30,10 @@ body {
 	text-align: center;
 }
 .content {
-	background: #EEEEEE;
+	background: #FFFFFF;
 	margin: 0px;
 	float: left;
 	width: 100%;
-	height: 400px;
 	text-align: center;
 }
 .footer {
@@ -42,6 +41,6 @@ body {
 	margin: 0px;
 	float: left;
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	text-align: center;
 }
