--- a/myCSS.css
+++ b/myCSS.css
@@ -45,3 +45,12 @@ body {
 	height: 40px;
 	text-align: center;
 }
+a:link {
+     color: #8083DB;
+}
+a:visited {
+     color: #EB66B9;
+}
+a:hover, a:active, a:focus { 
+     text-decoration: underline;
+}
