--- a/myCSS.css
+++ b/myCSS.css
@@ -5,7 +5,7 @@ body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
 }
 .homePage {
-	background: #758561;
+	background: #FFFFFF;
 }
 .container {
 	width: 960px;
@@ -46,10 +46,10 @@ body {
 	text-align: center;
 }
 a:link {
-     color: #8083DB;
+     color: #000000;
 }
 a:visited {
-     color: #EB66B9;
+     color: #000000;
 }
 a:hover, a:active, a:focus { 
      text-decoration: underline;
